<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Squeez</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="list">List View</string>
    <string name="grid">Grid View</string>
    <string name="title_activity_list_view">ListView</string>
    <string name="title_activity_list_view2">ListView2</string>
    <string name="title_activity_grid_view">GridView</string>
    <string name="zip">Zip</string>
    <string name="open">Open</string>
    <string name="move">Move</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="unzip">Unzip</string>
    <string name="manage">Manage</string>
    <string name="archive">Archive</string>
    <string name="rename">Rename</string>
    <string name="select">Select</string>
    <string name="change_view_mode">Change View Mode</string>
    <string name="clear_selected">Clear Selected</string>
    <string name="welcome">Welcome to Squeez!</string>
    <string name="programmed_by">Programmed By:</string>
    <string name="programmer1">Cordell Heath</string>
    <string name="programmer2">Cameron Hastey</string>
    <string name="programmer3">Tona Thao</string>
    <string name="get_started">Choose a view to get started:</string>
    

</resources>
