<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
	    android:id="@+id/ListViewTopButtonsLayout"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >

        <Button
            android:id="@+id/btnManage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/manage" />

        <Button
            android:id="@+id/btnArchive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/archive" />
        
	</LinearLayout>

   	<LinearLayout
   	    android:id="@+id/ListViewManageButtonsLayout"
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content"
   	    android:orientation="horizontal"
   	    android:visibility="gone" >
		    
		<Button
	        android:id="@+id/btnRename"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.25"
	        android:text="@string/rename" />
		       
    <Button
        android:id="@+id/btnMove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:text="@string/move" />
		
	    <Button
	        android:id="@+id/btnCopy"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.25"
	        android:text="@string/copy" />
	
	    <Button
	        android:id="@+id/btnDelete"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.25"
	        android:text="@string/delete" />
	    
	    </LinearLayout>
		
	   <LinearLayout
	       android:id="@+id/ListViewArchiveButtonsLayout"
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:orientation="horizontal"
	       android:visibility="gone" >
		    
			<Button
			    android:id="@+id/btnZip"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_weight="0.5"
			    android:text="@string/zip" />
			
			<Button
			    android:id="@+id/btnUnzip"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_weight="0.5"
			    android:text="@string/unzip" />
		    
		</LinearLayout>
    
    <ScrollView
        android:id="@+id/ListViewScrollLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true" >

        <LinearLayout
            android:id="@+id/ListViewVerticalLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>

</LinearLayout>
