<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/ViewVerticalLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dir_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/d_text" />

        <ScrollView
            android:id="@+id/ViewScrollLayout"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="8"
            android:fillViewport="true" >
        </ScrollView>

        <LinearLayout
            android:id="@+id/ViewOptionButtonsLayoutSpacer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone" >

            <Button
                android:id="@+id/btnZipSpacer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/zip" />

            <Button
                android:id="@+id/btnUnzipSpacer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/unzip" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ViewTopButtonsLayoutSpacer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:visibility="invisible" >

            <Button
                android:id="@+id/btnManageSpacer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/manage" />

            <Button
                android:id="@+id/btnArchiveSpacer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/archive" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/ViewManageButtonsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:layout_above="@+id/ViewBottomButtonsLayout" >

            <Button
                android:id="@+id/btnRename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/rename" />

            <Button
                android:id="@+id/btnMove"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/move" />

            <Button
                android:id="@+id/btnCopy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/copy" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/delete" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ViewArchiveButtonsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:layout_above="@+id/ViewBottomButtonsLayout" >

            <Button
                android:id="@+id/btnZip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/zip" />

            <Button
                android:id="@+id/btnUnzip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/unzip" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ViewBottomButtonsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true" >

            <Button
                android:id="@+id/btnManage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/manage" />

            <Button
                android:id="@+id/btnArchive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/archive" />
        </LinearLayout>
    
</RelativeLayout>
